# CMake-notes.

./: README.md
001/: CMakeLists.txt  main.cpp
001/blah/: CMakeLists.txt  blah.cpp
001/blah/include/: blah.h
001/include/: foo.h
001/src/: foo.cpp
